@@ -1,10 +1,4 @@
 #!/usr/bin/make -f
-# -*- makefile -*-
-# Sample debian/rules that uses debhelper.
-# This file was originally written by Joey Hess and Craig Small.
-# As a special exception, when this file is copied by dh-make into a
-# dh-make output file, you may use that output file without restriction.
-# This special exception was added by Craig Small in version 0.37 of dh-make.
 
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
@@ -14,8 +8,7 @@ build: build-stamp
 build-stamp:
 	dh_testdir
 	
-	# Add here commands to compile the package.
-	$(MAKE) DEBUG=1
+	$(MAKE) DEBUG=0
 	
 	touch $@
 
@@ -24,7 +17,6 @@ clean:
 	dh_testroot
 	rm -f build-stamp configure-stamp
 	
-	# Add here commands to clean up after the build process.
 	$(MAKE) clean
 	
 	dh_clean 
@@ -35,7 +27,7 @@ install: build
 	dh_prep  
 	dh_installdirs
 	
-	# Add here commands to install the package into debian/openfwwf.
+	# currently not working, we use dh_install instead
 	#$(MAKE) PREFIX=$(CURDIR)/debian/openfwwf/lib/firmware/b43-open install
 
 binary-indep: install
